# reason-language-server

./: .gitattributes  .gitignore  .npmignore  Changelog.md  LICENSE  Readme.md  appveyor.yml  azure-pipelines.yml  bsconfig.json  dune  esy.json  esy.lock.json  language-server.sh  node_modules  package-lock.json  package.json  package.thin.json  release.sh  runtests.sh  types.json  types.lock.json
.ci/: azure-pipelines.yml  build-platform.yml  build.yml  esy-build-steps.yml  publish-build-cache.yml  restore-build-cache.yml
.circleci/: config.osx.yml  config.yml  try-config.sh
.github/: FUNDING.yml
belt/: belt.ml  belt_Array.ml  belt_HashMap.ml  belt_HashMapInt.ml  belt_HashMapString.ml  belt_HashSet.ml  belt_HashSetInt.ml  belt_HashSetString.ml  belt_Id.ml  belt_List.ml  belt_Map.ml  belt_MapDict.ml  belt_MapInt.ml  belt_MapString.ml  belt_MutableMap.ml  belt_MutableMapInt.ml  belt_MutableMapString.ml  belt_MutableQueue.ml  belt_MutableSet.ml  belt_MutableSetInt.ml  belt_MutableSetString.ml  belt_MutableStack.ml  belt_Option.ml  belt_Range.ml  belt_Result.ml  belt_Set.ml  belt_SetDict.ml  belt_SetInt.ml  belt_SetString.ml  belt_SortArray.ml  belt_SortArrayInt.ml  belt_SortArrayString.ml  belt_internalAVLset.ml  belt_internalAVLtree.ml  belt_internalBuckets.ml  belt_internalBucketsType.ml  belt_internalMapInt.ml  belt_internalMapString.ml  belt_internalSetBuckets.ml  belt_internalSetInt.ml  (+7 more)
belt_ppx/: Belt_ppx.ml  dune
belt_src/: belt_HashSetString.ml  belt_MapString.ml  belt_MutableMapInt.ml  belt_MutableMapString.ml  belt_MutableSetInt.ml  belt_MutableSetString.ml  belt_SetInt.ml  belt_SortArrayInt.ml  belt_internalSetString.ml
client/: Readme.md  package-lock.json  package.json  reason-lisp.configuration.json  reason-lisp.json
codemod/: Codemod.re  Helpers.re  Runner.re  dune
codemod-example/: ExampleCodemod.re  dune
core/: CodeLens.re  Query.re  References.re  SharedTypes.re  UnifiedTypes.re  dune
dogfood/: Readme.md
esy.lock/: .gitattributes  index.json
example-codemod/: ExampleCodemod.re  Readme.md  dune
example-native-project/: bsconfig.json  package.json
process_ocaml/402/: PrintType.re  ProcessAttributes.re  ProcessCmt.re  ProcessExtra.re  Process_402.re  Process_402.rei  Shared.re  dune
relite/: Example.re  Expect.re  Files.re  Relite.re  Reporter.re  Runner.re  Suite.re  Types.re  dune
src/analyze_example_tests/: ExamplesTests.re  dune
type-digger/type-map/: DigTypes.re  GetTypeMap.re  Serde.ml  SerializeSimplerType.re  dune
type-digger/type-map-serde/: Config.re  Serde.ml  Serde.re  TransformHelpers.re  TypeMapSerde.re  dune
(+525 files in other folders)
