
(executable
  (name ExamplesTests)
  (public_name ExamplesTests)
  (modules ExamplesTests)
  (libraries Belt str Core Util Analyze)
  (flags :standard -open Util -w -9)
  (preprocess (pps Belt_ppx Ppx_monads))
  )

(executable
  (name Check)
  (public_name Check)
  (modules Check)
  (libraries Belt str Core Util Analyze)
  (flags :standard -open Util -w -9)
  (preprocess (pps Belt_ppx Ppx_monads))
  )


