
(library
  (name TypeMapSerde)
  (public_name ReasonLanguageServer.TypeMapSerde)
  (libraries TypeMap Analyze Util Vendor compiler-libs.common ocaml-migrate-parsetree)
  (flags :standard -w -26-32-50-9-27-39-33-35-6-3 -open Vendor -open Util)
  (preprocess (pps Belt_ppx Ppx_monads ppx_tools_versioned.metaquot_406))
  )


