
(library
  (name TypeMapSerde)
  (public_name ReasonLanguageServer.TypeMapSerde)
  (libraries TypeMap Analyze Util Vendor compiler-libs.common ocaml-migrate-parsetree)
  (flags :standard -w -9-30-34 -open Vendor -open Util)
  (preprocess (pps Belt_ppx Ppx_monads ppx_tools_versioned.metaquot_406))
  )


